changed margins, heading color, fixed bug where popup was not showing on ios

--- a/plugins/loan_calculator/public/css/loan-calculator-public.css
+++ b/plugins/loan_calculator/public/css/loan-calculator-public.css
@@ -38,10 +38,10 @@
   border-radius: 100px;
 }
 .cal-plugin .ui-slider-horizontal {
-  height: .2em;
+  height: .3em;
 }
 .cal-plugin .ui-slider-horizontal .ui-slider-handle {
-  top: -.5em;
+  top: -.55em;
   margin-left: -.6em;
   left: 0.5%
 }
@@ -54,12 +54,19 @@
   border: none;
   background-color: #DDDD52;
 }
+
+.cal-plugin .ui-slider .ui-slider-handle{
+  width: 1.5em;
+  height: 1.5em;
+}
 /*CUSTOM STYLE*/
+
+body {
+  cursor: pointer;
+ }
+
 .cal-plugin .text-green {
   color: #CCDA52
-}
-.cal-plugin {
-  margin: 8%;
 }
 
 .payment div {
@@ -128,6 +135,7 @@
 
 .fa {
   color: #CBCBCB;
+  padding-left: 5px;
 }
 /*BAR GRAPH CUSTOM STYLE*/
 
@@ -251,7 +259,7 @@
 }
 /*MEDIA QUERY FOR TABLET AND DESKTOP*/
 
-@media screen and (min-device-width: 600px) {
+@media screen and (min-width: 600px) {
   /*FLEX*/
   .flex-media {
     display: flex;
@@ -277,15 +285,12 @@
   .payment div {
     margin-bottom: 0rem;
   }
-  .cal-plugin {
-    margin: 5%;
 
-  }
   .payment {
-    width: 40%;
+    width: 30%;
   }
   .bar-graph {
-    width: 50%;
+    width: 45%;
   }
   .outer-graph {
     width: 380px;
@@ -301,6 +306,14 @@
   .outer-bar-3 {
     width: 100px;
     height: 0%;
+  }
+
+  .cal-plugin .text-green-media {
+    color: #CCDA52
+  }
+
+  .cal-plugin .text-black-media {
+    color: black;
   }
   .bar-graph p {
     font-size: 1em;
